--- a/index.html
+++ b/index.html
@@ -5,158 +5,164 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV</title>
+    <title>Ather Junaid Siddique - CV</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
 
 <body>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My CV</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-    </head>
+    <div class="container">
+        <header class="header">
+            <h1>Ather Junaid Siddique</h1>
+            <p>Passionate about technology and committed to leveraging my skills to contribute to a dynamic
+                organization.</p>
+        </header>
+        <div class="main-content">
+            <section class="section contact-info">
+                <h2>Contact Information</h2>
+                <ul>
+                    <li><i class="fa-solid fa-envelope"></i> <strong>Email:</strong> atherjunaidsiddique199@gmail.com
+                    </li>
+                    <li><i class="fa-solid fa-phone"></i> <strong>Phone:</strong> 03181295549</li>
+                    <li><i class="fa-solid fa-map-marker-alt"></i> <strong>Address:</strong> House no 268, Area 37/B
+                        Landhi no 01 Karachi</li>
+                    <li><i class="fa-brands fa-linkedin"></i> <strong><a class="link"
+                                href="https://www.linkedin.com/in/ather-junaid-254820264?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">LinkedIn</a></strong>
+                    </li>
+                    <li><i class="fa-brands fa-github"></i> <strong><a class="link"
+                                href="https://github.com/Atherjunaidsiddique">GitHub</a></strong></li>
+                    <li><i class="fa-brands fa-whatsapp"></i> <strong><a class="link"
+                                href="https://whatsapp.com/dl/">WhatsApp</a></strong></li>
+                </ul>
+            </section>
 
-    <body>
-        <div class="container">
-            <div class="header">
-                <h1>ATHER JUNAID SIDDIQUE</h1>
-                
-            </div>
+            <section class="section professional-summary">
+                <h2>Professional Summary</h2>
+                <p>
+                    I am seeking to establish a career with a progressive company where I can learn and grow while
+                    contributing to the company's productivity and success. My goal is to continuously develop my skills
+                    and advance in my career.
+                </p>
+            </section>
 
-            <div class="main-content">
-                <div class="section">
-                    <h2>Contact Information</h2>
-                    <ul>
-                        <li><strong>Email:</strong> atherjunaidsiddique199@gmail.com</li>
-                        <li><strong>Phone:</strong> 03181295549</li>
-                        <li><strong>Address:</strong> House no 268, Area 37/B Landhi no 01 Karachi</li>
-                        <li><strong><a class="link1"
-                                    href="https://www.linkedin.com/in/ather-junaid-254820264?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">LinkedIn</a>:
-                                <i class="fa-brands fa-linkedin"></i></strong> </li>
-                        <li><strong><a class="link2" href="https://github.com/Atherjunaidsiddique">Github</a>: <i
-                                    class="fa-brands fa-github"></i></i></strong> </li>
-                        <li><strong><a class="link3" href=" https://whatsapp.com/dl/">whatsapp</a>: <i
-                                    class="fa-brands fa-whatsapp"></i></i></i></strong> </li>
-                    </ul>
+            <section class="section experience">
+                <h2>Experience</h2>
+                <div class="job">
+                    <h3>Shan Foods (PVT) LTD.</h3>
+                    <p><strong>Position:</strong> Data Entry</p>
+                    <p><em>Duration: 6 Months</em></p>
                 </div>
-
-                <div class="section">
-                    <h2>Professional Summary</h2>
-                    <p>
-                        Seeking to establish a career With a progressive company Where I can gain and learn something
-                        and my abilities and performance can contribute to the company's productivity leading to future
-                        career advancement.
-                    </p>
+                <div class="job">
+                    <h3>Loads (PVT) LTD.</h3>
+                    <p><strong>Position:</strong> Internship</p>
+                    <p><em>Duration: 1 Year</em></p>
                 </div>
-
-                <div class="section">
-                    <h2>Experience</h2>
-                    <h3> Shan Foods (PVT) LTD.</h3>
-
-                    <li>Data Entry</li>
-                    <p><em>(06 Month)</em></p>
-
-                    <h3> Loads (PVT) LTD.</h3>
-
-                    <li>Intenship</li>
-                    <p><em>(01 Year)</em></p>
-
-                    <h3> Olypia Mills (PVT) LTD.</h3>
-
-                    <li>Quality Checker</li>
-                    <p><em>(01 Year)</em></p>
-
+                <div class="job">
+                    <h3>Olypia Mills (PVT) LTD.</h3>
+                    <p><strong>Position:</strong> Quality Checker</p>
+                    <p><em>Duration: 1 Year</em></p>
                 </div>
+            </section>
 
-                <div class="section">
-                    <h2>Education</h2>
-                    <h3>Matric - Ali Foundation Acdmy</h3>
-                    <p><em>2017</em></p>
+            <section class="section education">
+                <h2>Education</h2>
+                <div class="education-item">
+                    <h3>Matric - Ali Foundation Academy</h3>
+                    <p><em>Year: 2017</em></p>
+                </div>
+                <div class="education-item">
                     <h3>Diploma - Govt. Polytechnical Institute</h3>
-                    <p><em>2020</em></p>
-                    <h3>Web Mobile & App Development - Saylani Mass I.T </h3>
-                    <p><em>Continue</em></p>
+                    <p><em>Year: 2020</em></p>
                 </div>
+                <div class="education-item">
+                    <h3>Web Mobile & App Development - Saylani Mass I.T</h3>
+                    <p><em>Status: Ongoing</em></p>
+                </div>
+            </section>
 
-                <div class="section">
-                    <h2>Web Skills</h2>
+            <section class="section skills">
+                <h2>Skills</h2>
+                <div class="skills-grid">
 
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JavaScript</li>
-                    <li>Ms Office</li>
-                    <li>BootStrap</li>
+                    <div class="skills-category">
+                        <h3>Technical Skills</h3>
+                        <h4>Hardware Basics</h4>
+                        <ul>
+                            <li>PC Assembly & Basic Troubleshooting</li>
+                            <li>Familiar with Hardware Components</li>
+                        </ul>
+                        <h4>Networking Essentials</h4>
+                        <ul>
+                            <li>Understanding of IP Addressing & Subnetting</li>
+                            <li>Basic Router/Switch Configuration</li>
+                        </ul>
+                        <h4>Help Desk Support</h4>
+                        <ul>
+                            <li>User Assistance for Software/Hardware Issues</li>
+                            <li>Experience with Ticketing Systems</li>
+                        </ul>
+                    </div>
+                    <div class="skills-category">
+                        <h3>Management Skills</h3>
+                        <h4>GitHub Proficiency</h4>
+                        <ul>
+                            <li>Experienced in Creating, Managing, and Collaborating on GitHub Repositories</li>
+                            <li>Familiar with Branching, Merging, and Pull Requests</li>
+                        </ul>
+                        <h4>Repository Hosting</h4>
+                        <ul>
+                            <li>Skilled in Setting Up and Configuring Repositories for Projects</li>
+                            <li>Efficient in Managing Version Control Workflows</li>
+                        </ul>
+                    </div>
+                    <div class="skills-category">
+                        <h3>Soft Skills</h3>
+                        <h4>Communication</h4>
+                        <ul>
+                            <li>Clear & Concise User Interaction</li>
+                        </ul>
+                        <h4>Problem Solving</h4>
+                        <ul>
+                            <li>Quick Identification & Resolution of Technical Issues</li>
+                        </ul>
+                    </div>
+                    <div class="skills-category">
+                        <h3>Web Skills</h3>
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                            <li>MS Office</li>
+                            <li>Bootstrap</li>
+                        </ul>
+                    </div>
 
-                    <h2>Technical Skills:</h2>
-                    <h3>Hardware Basics:</h3>
-
-                    <li>PC Assembly & basic troubleshooting</li>
-                    <li>Familiars with hardware components</li>
-
-                    <h3>Nekworking Essentials:</h3>
-
-                    <li> Understanding of IP addressing & subentting</li>
-                    <li>Basic router/switch configuration</li>
-
-                    <h3>Help Desk Support:</h3>
-
-                    <li>User assistance for software/Hardware issues</li>
-                    <li>Experience with ticketing systems</li>
-
-                    <h2>Soft Skills:</h2>
-                    <h3>Communication:</h3>
-
-                    <li>Clear & concise user interaction</li>
-
-                    <h3>Problem Solving:</h3>
-
-                    <li>Quick identification & resolution of technical issues </li>
-
-                    <h2>Management Skills:</h2>
-                    <h3>Github Proficiency:</h3>
-
-                    <li>Experienced in creating managing and collaborting on Github repositories</li>
-                    <li>Familiar with branching merging and pull request</li>
-
-                    <h3>Repository Hosting:</h3>
-
-                    <li>Skilled in setting up and configuring repositories for projects</li>
-                    <li>Efficient in managing version control workflows</li>
 
 
 
 
                 </div>
+            </section>
 
-                <div class="section">
-                    <h2>Certifications</h2>
-                    <ul>
-                        <h3>
-                            <li>Matriculation Certificate
-                        </h3> 2019</li>
+            <section class="section certifications">
+                <h2>Certifications</h2>
+                <ul>
+                    <li>Matriculation Certificate - 2019</li>
+                    <li>Provision Certificate DAE in Mechanical - 2021</li>
+                </ul>
+            </section>
 
-                        <li>
-                            <h3> Provision Certificate DAE in Mechnical </h3> 2021
-                        </li>
-                    </ul>
-                </div>
-                <div class="section">
-                    <h2>Interests</h2>
-                    <ul>
-
-                        <li>Cricket</li>
-                        <li>Photography</li>
-                        <li>Traveling</li>
-                        <li>Technology</li>
-                        <li>Blogging</li>
-
-                    </ul>
-                </div>
-            </div>
+            <section class="section interests">
+                <h2>Interests</h2>
+                <ul>
+                    <li class="one">  Cricket</li>
+                    <li class="one1">Photography</li>
+                    <li class="one2">Traveling</li>
+                    <li class="one4">Blogging</li>
+                </ul>
+            </section>
         </div>
-
-
-    </body>
+    </div>
+</body>
 
 </html>
